# noema

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: phase0_124m.yaml  phase0_tiny.yaml  phase1_baseline.yaml  phase1_latent.yaml  phase1_n2_baseline.yaml  phase1_n3_baseline.yaml  phase1_n3_latent.yaml  phase1_n3_latent_fixed.yaml  phase1_n3_latent_long.yaml  phase1_n3_latent_sg.yaml  phase1_n3_latent_sg_constlr.yaml  phase1_n3_latent_sg_k1.yaml  phase1_n3_latent_sg_k3.yaml  phase1_n3_long.yaml  phase1_n3_probe.yaml
docs/: research_plan.md
scripts/: analyze_arith.py  eval_arith.py  generate.py  prepare_tinystories.py
src/noema/: arith.py  data.py  latent.py  latent_train.py  model.py  tokenizer.py  train.py
tests/: test_latent.py  test_model.py
